--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ body {
     max-width: 941px;
     display: flex;
     justify-content: center;
-    overflow: hidden;
-    width: 941px;
+    overflow: visible;
     justify-content: flex-end;
     flex-direction: row;
     align-items: flex-start;
@@ -93,6 +92,7 @@ body {
     gap: 10px;
     flex-wrap: nowrap;
     margin-bottom: 5px;
+    transition: margin-left 1s cubic-bezier();
 }
 
 .bottom-slider-wrapper {
@@ -123,7 +123,7 @@ body {
 
 .text-container {
     height: 300px;
-    width: 400px;
+    width: auto;
     background: var(--background-color-primary);
     z-index: 2;
     line-height: 20px;
@@ -140,7 +140,6 @@ body {
     text-align: left;
     width: 333px;
     height: 120px;
-    overflow-wrap: normal;
 }
 
 .text-container p {
@@ -159,7 +158,6 @@ body {
     border: 1px solid var(--background-color-secondary);
     background-color: var(--background-color-primary);
     border-radius: 5px;
-    opacity: 0.8;
     transition: all 0.3s;
     background-repeat: no-repeat;
     background-position: center;
