--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
     max-width: 941px;
     display: flex;
     justify-content: center;
-    overflow: visible;
+    overflow: hidden;
     justify-content: flex-end;
     flex-direction: row;
     align-items: flex-start;
