--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ body {
     max-width: 941px;
     display: flex;
     justify-content: center;
-    overflow: visible;
+    overflow: hidden;
     justify-content: flex-end;
     flex-direction: row;
     margin-top: 60px;
