--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    gap: 60px;
 }
 
 .container {
@@ -25,8 +26,6 @@ body {
     overflow: hidden;
     justify-content: flex-end;
     flex-direction: row;
-    margin-top: 60px;
-    margin-bottom: 60px;
 }
 
 .header {
