replaced jquery functions for hover buttons with :hover pseudo-class in css

--- a/src/style.css
+++ b/src/style.css
@@ -120,12 +120,27 @@ body {
     height: 60px;
 }
 
+.button-container button:hover {
+    cursor: pointer;
+    
+}
+
 #next {
     background-image: url(../assets/arrow-gray-right.png);
 }
 
 #previous {
     background-image: url(../assets/arrow-gray-left.png);
+}
+
+#next:hover {
+    background-image: url(../assets/arrow-blue-right.png);
+    border: 1px solid var(--foreground-color-primary);
+}
+
+#previous:hover {
+    background-image: url(../assets/arrow-blue-left.png);
+    border: 1px solid var(--foreground-color-primary);
 }
 
 .text-container {
