--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body {
     max-width: 941px;
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    overflow: visible;
     justify-content: flex-end;
     flex-direction: row;
 }
