--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap');
-$font: 'Source Sans Pro', sans-serif;
+$fontPrimary: 'Source Sans Pro', sans-serif;
