--- a/src/styles/scss/layout/_text-container.scss
+++ b/src/styles/scss/layout/_text-container.scss
@@ -1,12 +1,12 @@
 .text-container {
     width: auto;
-    background: var(--background-color-primary);
+    background: $backgroundPrimary;
     line-height: 20px;
     margin-left: 10px;
 
 
     h1 {
-        color: var(--foreground-color-primary);
+        color: $foregroundPrimary;
         font-weight: 700;
         font-size: 32px;
         font-style: normal;
@@ -16,7 +16,7 @@
     }
     
     p {
-        color: var(--foreground-color-secondary);
+        color: $foregroundSecondary;
         font-size: 18px;
         font-style: normal;
         font-weight: 400;
