--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -1,6 +1,7 @@
 @import 'base/_fonts';
 @import 'base/_colors';
 @import 'base/_arrows';
+@import 'base/_mixins';
 @import 'components/_images';
 @import 'components/_buttons';
 @import 'layout/_container';
