--- a/src/styles/scss/components/_buttons.scss
+++ b/src/styles/scss/components/_buttons.scss
@@ -7,14 +7,7 @@
     gap: 10px;
 
     button {
-        border: 1px solid $backgroundSecondary;
-        background-color: $backgroundPrimary;
-        border-radius: 5px;
-        transition: all 0.3s;
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 60px;
-        height: 60px;
+        @include button-style;
 
         &:hover {
             cursor: pointer;
