--- a/src/styles/scss/layout/_text-container.scss
+++ b/src/styles/scss/layout/_text-container.scss
@@ -6,23 +6,19 @@
 
 
     h1 {
+        @include text-style;
         color: $foregroundPrimary;
         font-weight: 700;
         font-size: 32px;
-        font-style: normal;
         line-height: 40px;
-        letter-spacing: -0.2px;
-        width: 300.93px;
     }
     
     p {
+        @include text-style;
         color: $foregroundSecondary;
         font-size: 18px;
-        font-style: normal;
         font-weight: 400;
         line-height: 26px;
-        letter-spacing: -0.2px;
-        width: 300.93px;
     }
 
 }
