--- a/src/styles/scss/components/_buttons.scss
+++ b/src/styles/scss/components/_buttons.scss
@@ -15,19 +15,19 @@
     }
 
     #next {
-        background-image: url(../../../../assets/arrow-gray-right.png);
+        background-image: url(../../../assets/arrow-gray-right.png);
 
         &:hover {
-            background-image: url(../../../../assets/arrow-blue-right.png);
+            background-image: url(../../../assets/arrow-blue-right.png);
             border: 1px solid $foregroundPrimary;
         }
     }
     
     #previous {
-        background-image: url(../../../../assets/arrow-gray-left.png);
+        background-image: url(../../../assets/arrow-gray-left.png);
 
         &:hover {
-            background-image: url(../../../../assets/arrow-blue-left.png);
+            background-image: url(../../../assets/arrow-blue-left.png);
             border: 1px solid $foregroundPrimary;
         }
     }
